# GHGFLIX

./: .gitignore  BERICHT.md  GHGFlix_Masterplan.md  LICENSE  PLAN_STATUS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  docker.yml
docs/: ARCHITECTURE.md  TEST_CHECKLIST.md
mobile/: App.js  README.md  app.json  package.json
public/: manifest.webmanifest
scripts/: make-icon.mjs
server/: Dockerfile  README-ZimaOS.md  docker-compose.yml  package.json
server/src/: db.js  index.js  invoke.js  parser.js  scanner.js  stream.js  supabase.js  tmdb.js
server/web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  intro.rs  lib.rs  main.rs  models.rs  parser.rs  paths.rs  probe.rs  scanner.rs  tmdb.rs  watcher.rs
src/components/: ArtworkDialog.tsx  Brand.tsx  ContextMenu.tsx  Extras.tsx  Hero.tsx  IdentifyDialog.tsx  Layout.tsx  Mascot.tsx  MediaCard.tsx  MediaRow.tsx  MiniPlayer.tsx  ReassignDialog.tsx  Scrubber.tsx  ThemeStore.tsx  cards.tsx  ui.tsx
src/lib/: api.ts  backend.ts  contextmenu.ts  format.ts  img.ts  keys.ts  lang.ts  mpv.ts  platform.ts  playback.ts  serverSync.ts  store.ts  supabase.ts  themes.ts  tvMode.ts  types.ts  uiPrefs.ts  useHorizontalWheel.ts
src/pages/: Home.tsx  Login.tsx  MovieDetail.tsx  Movies.tsx  MyList.tsx  Player.tsx  Profiles.tsx  SearchPage.tsx  Shows.tsx  (+3 more)
supabase/: schema.sql
tv/: README.md
